--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -54,7 +54,7 @@ https://templatemo.com/tm-516-known
     }
 #gift-about .gift-progress .progress-bar-danger
     {
-        background: red;
+        background: green;
     }
 #gift-about .text-top
     {
@@ -103,7 +103,7 @@ https://templatemo.com/tm-516-known
 
 #about-divider
     {
-        background: url('../images/finger.jpg');
+        background: url('../images/testing.jpg');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center;
@@ -443,6 +443,165 @@ https://templatemo.com/tm-516-known
 .team-item .down-content p {
 	margin-bottom: 20px;
 }
+
+/* Fun Facts */
+
+.fun-facts {
+	margin-top: 140px;
+	background-color: #292828;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	padding: 140px 0px;
+	color: #fff;
+}
+
+.fun-facts span {
+	text-transform: uppercase;
+	font-size: 15px;
+	color: #fff;
+	letter-spacing: 1px;
+	margin-bottom: 10px;
+	display: block;
+}
+
+.fun-facts h2 {
+	font-size: 36px;
+	font-weight: 600;
+	margin-bottom: 35px;
+}
+
+.fun-facts em {
+	font-style: normal;
+	color:red;
+}
+
+.fun-facts p {
+	color: #fff;
+	margin-bottom: 40px;
+}
+
+.fun-facts .left-content {
+	margin-right: 45px;
+}
+
+.count-area-content {
+	text-align: center;
+	background-color: rgba(250,250,250,0.1);
+	padding: 25px 30px 35px 30px;
+	margin: 15px 0px;
+}
+
+.count-digit {
+    margin: 5px 0px;
+    color: red;
+    font-weight: 700;
+    font-size: 36px;
+}
+.count-title {
+    font-size: 20px;
+    font-weight: 600;
+    color: #fff;
+    letter-spacing: 0.5px;
+}
+
+
+/* Contact Information */
+
+.contact-information {
+	margin-top: 140px;
+  background-color: #292828;
+}
+
+.contact-information .contact-item {
+	padding: 60px 30px;
+	background-color: #f7f7f7;
+	text-align: center;
+}
+
+.contact-information .contact-item i {
+	color: red;
+	font-size: 48px;
+	margin-bottom: 40px;
+}
+
+.contact-information .contact-item h4 {
+	font-size: 20px;
+	font-weight: 700;
+	letter-spacing: 0.25px;
+	margin-bottom: 15px;
+}
+
+.contact-information .contact-item p {
+	margin-bottom: 20px;
+}
+
+.contact-information .contact-item a {
+	font-weight: 600;
+	color: red;
+	font-size: 15px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
